--- a/css/scss/_root.scss
+++ b/css/scss/_root.scss
@@ -10,7 +10,7 @@ $dark-color:#3C363B;
 
 body {
   margin: 0;
-  font-family: 'Noto Serif TC', serif;
+  font-family: 'Noto Serif JP', serif;
   line-height: 1;
   color: $primary-color;
 }
