--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -14,6 +14,7 @@ footer {
 
       a {
         color: $dark-color;
+        letter-spacing: 2px;
       }
     }
 
@@ -30,11 +31,13 @@ footer {
 
         .ig {
           margin-left: 40px;
-          margin-right: 10px;
+          margin-right: 15px;
+          line-height: 1;
         }
 
         .fb {
           margin-left: 10px;
+          line-height: 1;
         }
       }
 
@@ -44,7 +47,7 @@ footer {
         font-weight: 400;
         line-height: 1;
         letter-spacing: 0px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
       }
     }
   }
