--- a/css/common.scss
+++ b/css/common.scss
@@ -15,20 +15,20 @@
 @import "./scss/page/classcontent";
 @import "./scss/page/contact";
 
-// X-Small devices (portrait phones, less than 576px)
-//@media (max-width: 575.98px) { ... }
+// @media screen and (min-width: 1400px){
+// }
 
-// Small devices (landscape phones, less than 768px)
-//@media (max-width: 767.98px) { ... }
+// @media screen and (min-width: 1200px) and (max-width: 1339.98px){
+// }
 
-// Medium devices (tablets, less than 992px)
-//@media (max-width: 991.98px) { ... }
+// @media screen and (min-width: 992px) and (max-width: 1199.98px){
+// }
 
-// Large devices (desktops, less than 1200px)
-//@media (max-width: 1199.98px) { ... }
+// @media screen and (min-width: 768px) and (max-width: 991.98px){
+// }
 
-// X-Large devices (large desktops, less than 1400px)
-//@media (max-width: 1399.98px) { ... }
+// @media screen and (min-width: 576px) and (max-width: 767.98px){
+// }
 
-// XX-Large devices (larger desktops)
-// No media query since the xxl breakpoint has no upper bound on its width
+// @media screen and (max-width: 575.98px){
+// }
