--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -1,24 +1,23 @@
-footer {
+.footer {
   padding: 64px 0px;
   background-color: #F9F9F9;
 
-
-  .footer-wrap {
+  .container-footer {
+    width: 90%;
+    margin: 0 auto;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: flex-start;
 
-    li {
-      margin: 16px 0;
-
-      a {
-        color: $dark-color;
-        letter-spacing: 2px;
-      }
+    a {
+      display: inline-block;
+      padding: 8px 0;
+      color: $dark-color;
+      letter-spacing: 2px;
     }
 
-    .footer-brandbox {
+    .brandbox {
       display: flex;
       flex-flow: column wrap;
       justify-content: flex-end;
@@ -49,6 +48,23 @@ footer {
         letter-spacing: 0px;
         margin-bottom: 20px;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  .container-footer {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    .sitmap {
+      width: 30%;
+    }
+
+    .info-box {
+      width: 40%;
     }
   }
 }
