--- a/css/scss/_navbar.scss
+++ b/css/scss/_navbar.scss
@@ -1,46 +1,65 @@
 .navbar {
-  padding: 20px 3%;
   width: 100vw;
   position: fixed;
   top: 0%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
   z-index: 9;
   backdrop-filter: blur(3px);
 
-
-  .navlink-wrap {
+  .container-navbar {
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px 0;
     display: flex;
-    justify-content: flex-end;
-  }
+    justify-content: space-between;
+    align-items: center;
 
-  .navlink {
+    .navbar-brand {
+      margin-right: auto;
+    }
 
+    .navbar-collapse {
+      display: flex;
+      justify-content: flex-end;
 
-    padding: 0px 30px;
+      .navbar-nav {
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: flex-end;
 
-    a {
-      letter-spacing: 2px;
+        .nav-item {
+
+          .navlink {
+            padding: 16px 30px;
+            letter-spacing: 2px;
+          }
+        }
+      }
+    }
+
+    .navbar-toggler {
+      margin-left: 30px;
+      border: none;
+      background-color: transparent;
+
+      .line-1 {
+        width: 24px;
+        height: 1px;
+        background-color: $primary-color;
+        margin-top: 1px;
+      }
+
+      .line-2 {
+        width: 24px;
+        height: 1px;
+        background-color: $primary-color;
+        margin-top: 11px;
+      }
     }
   }
+}
 
-  .menu-box {
-    margin-left: 50px;
-  }
-
-  .line-1 {
-    width: 24px;
-    height: 1px;
-    background-color: $primary-color;
-    margin-top: 1px;
-  }
-
-  .line-2 {
-    width: 24px;
-    height: 1px;
-    background-color: $primary-color;
-    margin-top: 11px;
+@media screen and (max-width: 767.98px) {
+  .container-navbar {
+    display: none !important;
   }
 }
