更新nav/footer RWD

--- a/css/common.scss
+++ b/css/common.scss
@@ -6,8 +6,9 @@
 @import "./scss/navbar";
 @import "./scss/footer";
 @import "./scss/menu";
+@import "./scss/cursor";
 
-//each page
+//page
 @import "./scss/page/index";
 @import "./scss/page/arts";
 @import "./scss/page/works";
