--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -29,19 +30,12 @@ a {
   font-size: 14px;
   text-decoration: none;
   color: #6C4D41;
+  cursor: none;
 }
 
 img,
 video {
   max-width: 100%;
-}
-
-.bg-secondary {
-  background: #E6DFD9;
-}
-
-.bg-secondary-dark {
-  background: #EDDEDA;
 }
 
 .primary-color {
@@ -54,6 +48,14 @@ video {
 
 .dark-color {
   color: #3C363B;
+}
+
+.bg-secondary {
+  background: #E6DFD9;
+}
+
+.bg-secondary-dark {
+  background: #EDDEDA;
 }
 
 .px-24 {
@@ -94,6 +96,11 @@ video {
 
 .w-70 {
   width: 70%;
+}
+
+.container {
+  width: 90%;
+  margin: 0 auto;
 }
 
 .w-100 {
@@ -139,6 +146,12 @@ video {
 .grid {
   display: -ms-grid;
   display: grid;
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1500px;
+  }
 }
 
 .align-center {
@@ -452,7 +465,7 @@ p {
 }
 
 @media screen and (max-width: 767.98px) {
-  .container-navbar {
+  .navbar-collapse {
     display: none !important;
   }
 }
@@ -470,8 +483,8 @@ p {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-flow: row nowrap;
-          flex-flow: row nowrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -481,7 +494,7 @@ p {
 }
 
 .footer .container-footer a {
-  display: inline-block;
+  display: block;
   padding: 8px 0;
   color: #3C363B;
   letter-spacing: 2px;
@@ -535,27 +548,44 @@ p {
   margin-bottom: 20px;
 }
 
-@media screen and (max-width: 575.98px) {
-  .container-footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column wrap;
-            flex-flow: column wrap;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+@media screen and (max-width: 767.98px) {
+  .footer {
+    padding: 30px 0px;
   }
-  .container-footer .sitmap {
-    width: 30%;
+  .footer .container-footer .sitemap {
+    display: block;
+    width: 20%;
   }
-  .container-footer .info-box {
-    width: 40%;
+  .footer .container-footer .info-box {
+    display: block;
+    width: 70%;
+  }
+  .footer .container-footer .brandbox {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-flow: column wrap !important;
+            flex-flow: column wrap !important;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    margin-top: 40px;
+    width: 100%;
+  }
+  .footer .container-footer .brandbox .follow-box {
+    margin-left: -20px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .footer .container-footer .brandbox h4 {
+    font-size: 54px;
+  }
+  .footer .container-footer .brandbox p {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
   }
 }
 
@@ -655,6 +685,41 @@ p {
   padding: 16px 42px;
   font-family: 'Noto Serif TC', serif;
   letter-spacing: 2px;
+}
+
+.cursor-wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow: hidden;
+  z-index: 100;
+  pointer-events: none;
+}
+
+.cursor {
+  width: 10px;
+  height: 10px;
+  background: #333;
+  border-radius: 50%;
+  position: absolute;
+  pointer-events: none;
+  z-index: 100;
+}
+
+#ball {
+  width: 60px;
+  height: 60px;
+  background: none;
+  border: 1px solid #222;
+  border-radius: 50%;
+  /* absoulute才能讓js指定他的xy */
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin: -25px 0 0 -25px;
+  pointer-events: none;
 }
 
 .hero-section {
@@ -1004,9 +1069,9 @@ p {
 
 .work-title-wrap {
   margin: -100px 0 100px 0;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
@@ -1014,6 +1079,7 @@ p {
 
 .work-title-wrap .work-title-box {
   padding: 35px 60px;
+  margin-right: 50px;
   background-color: #E6DFD9;
   text-align: center;
 }
@@ -1063,6 +1129,57 @@ p {
 
 .works-series-wrap h6 {
   margin: 10px 0px 10px 0px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .work-banner {
+    height: 500px;
+  }
+  .work-title-wrap {
+    margin: -60px 0 100px 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+  }
+  .work-title-wrap .work-title-box {
+    padding: 35px 30px;
+    margin-right: 20px;
+  }
+  .work-title-wrap .work-title-box h3 {
+    margin: 20px 0px;
+    font-size: 36px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .work-banner {
+    height: 500px;
+  }
+  .work-title-wrap {
+    margin: -60px auto 60px auto;
+    height: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+  }
+  .work-title-wrap .work-title-box {
+    margin: 0 auto;
+    padding: 35px 30px;
+  }
+  .work-title-wrap .work-title-box h3 {
+    font-size: 36px;
+  }
+  .work-title-wrap .w-50 {
+    margin: 20px auto;
+    width: 85%;
+    text-align: center;
+  }
+  .works-series-wrap .w-45 {
+    width: 100%;
+    margin-bottom: 40px;
+  }
 }
 
 .class-hero {
