--- a/css/scss/_footer.scss
+++ b/css/scss/_footer.scss
@@ -1,3 +1,5 @@
+//RWD  ---OK
+
 .footer {
   padding: 64px 0px;
   background-color: #F9F9F9;
@@ -6,12 +8,12 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
     align-items: flex-start;
 
     a {
-      display: inline-block;
+      display: block;
       padding: 8px 0;
       color: $dark-color;
       letter-spacing: 2px;
@@ -52,19 +54,41 @@
   }
 }
 
-@media screen and (max-width: 575.98px) {
-  .container-footer {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
+@media screen and (max-width: 767.98px) {
+  .footer {
+    padding: 30px 0px;
 
-    .sitmap {
-      width: 30%;
-    }
+    .container-footer {
+      .sitemap {
+        display: block;
+        width: 20%;
+      }
 
-    .info-box {
-      width: 40%;
+      .info-box {
+        display: block;
+        width: 70%;
+      }
+
+      .brandbox {
+        flex-flow: column wrap !important;
+        justify-content: center !important;
+        align-content: center;
+        margin-top: 40px;
+        width: 100%;
+
+        .follow-box {
+          margin-left: -20px;
+          align-self: center;
+        }
+
+        h4 {
+          font-size: 54px;
+        }
+
+        p {
+          align-self: center;
+        }
+      }
     }
   }
 }
