--- a/css/scss/_navbar.scss
+++ b/css/scss/_navbar.scss
@@ -1,3 +1,5 @@
+//RWD  ---OK
+
 .navbar {
   width: 100vw;
   position: fixed;
@@ -59,7 +61,7 @@
 }
 
 @media screen and (max-width: 767.98px) {
-  .container-navbar {
+  .navbar-collapse {
     display: none !important;
   }
 }
