--- a/css/scss/_root.scss
+++ b/css/scss/_root.scss
@@ -13,6 +13,7 @@ body {
   font-family: 'Noto Serif JP', serif;
   line-height: 1;
   color: $primary-color;
+  // cursor: none;
 }
 
 main {
@@ -34,6 +35,7 @@ a {
   font-size: 14px;
   text-decoration: none;
   color: $primary-color;
+  cursor: none;
 }
 
 img,
