--- a/css/common.css
+++ b/css/common.css
@@ -154,6 +154,19 @@ video {
   }
 }
 
+@media screen and (max-width: 767.98px) {
+  .wrap-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column wrap;
+            flex-flow: column wrap;
+  }
+  .wrap-row .w-30,
+  .wrap-row .w-40 {
+    width: 100%;
+  }
+}
+
 .align-center {
   text-align: center;
 }
@@ -266,6 +279,12 @@ p {
   right: 0%;
   left: 0%;
   bottom: 20px;
+}
+
+.sub-title {
+  margin-bottom: 40px;
+  width: 100%;
+  text-align: center;
 }
 
 .left-fixed {
@@ -590,7 +609,7 @@ p {
 }
 
 .menu-section {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -604,30 +623,40 @@ p {
 }
 
 .menu-section .menubg {
+  width: 30%;
   height: 100vh;
   background: url(../assets/menu_img.jpg) no-repeat 50% 50%;
   background-size: cover;
 }
 
 .menu-section .menu-content {
-  padding: 120px 60px 60px 60px;
+  padding: 60px;
+  width: 70%;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-.menu-section .menulink {
-  margin: 15px 0px;
+.menu-section .menu-content .menu-link-wrap .menulink {
+  margin: 10px 0px;
   padding: 10px 0;
+  display: block;
   font-family: 'Noto Serif TC', serif;
-  font-size: 36px;
+  font-size: 32px;
   letter-spacing: 8px;
   font-weight: 100;
   color: #E6DFD9;
 }
 
-.menu-section .menu-contact-box {
+.menu-section .menu-content .menu-contact-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -640,51 +669,127 @@ p {
           justify-content: space-between;
 }
 
-.menu-section .item-1 {
+.menu-section .menu-content .menu-contact-wrap .item-1 {
+  display: block;
+  width: 100%;
   color: #E6DFD9;
   font-size: 20px;
   margin: 0 0 20px 0;
 }
 
-.menu-section .item-2 {
+.menu-section .menu-content .menu-contact-wrap .menu-info-wrap {
+  width: 30%;
+}
+
+.menu-section .menu-content .menu-contact-wrap .menu-info-wrap .item-2,
+.menu-section .menu-content .menu-contact-wrap .menu-info-wrap .item-3 {
   color: #E6DFD9;
   margin: 0 0 16px 0;
 }
 
-.menu-section .item-3 {
-  color: #E6DFD9;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+.menu-section .menu-content .menu-contact-wrap .menu-sns-wrap {
+  width: 20%;
 }
 
-.menu-section .item-4 {
+.menu-section .menu-content .menu-contact-wrap .menu-sns-wrap .item-4,
+.menu-section .menu-content .menu-contact-wrap .menu-sns-wrap .item-5 {
+  margin: 0 0 16px 0;
+  display: block;
+}
+
+.menu-section .menu-content .menu-contact-wrap .menu-btn-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.menu-section .menu-content .menu-contact-wrap .menu-btn-wrap .item-6,
+.menu-section .menu-content .menu-contact-wrap .menu-btn-wrap .item-7 {
+  display: inline-block;
+  max-height: 50px;
+  margin: 0px 10px;
+  padding: 16px 42px;
+  font-family: 'Noto Serif TC', serif;
+  letter-spacing: 2px;
+}
+
+.menu-section .menu-content .menu-contact-wrap .item-8 {
+  display: block;
+  width: 100%;
   color: #E6DFD9;
   opacity: 50%;
   letter-spacing: 1px;
   margin: 10px 0 0 0;
 }
 
-.menu-section .item-5 {
-  margin: 0 0 16px 0;
+@media (max-width: 1199.98px) {
+  .menu-section .menu-content {
+    padding: 40px;
+  }
+  .menu-section .menu-content .menu-contact-wrap {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-flow: row wrap !important;
+            flex-flow: row wrap !important;
+    -webkit-box-pack: start !important;
+        -ms-flex-pack: start !important;
+            justify-content: flex-start !important;
+  }
+  .menu-section .menu-content .menu-contact-wrap .item-1 {
+    display: none;
+  }
+  .menu-section .menu-content .menu-contact-wrap .menu-info-wrap {
+    width: 300px;
+  }
+  .menu-section .menu-content .menu-contact-wrap .menu-info-wrap .item-2,
+  .menu-section .menu-content .menu-contact-wrap .menu-info-wrap .item-3 {
+    margin: 0 0 12px 0;
+  }
+  .menu-section .menu-content .menu-contact-wrap .menu-sns-wrap {
+    width: 20%;
+  }
+  .menu-section .menu-content .menu-contact-wrap .menu-btn-wrap {
+    width: 40%;
+  }
+  .menu-section .menu-content .menu-contact-wrap .menu-btn-wrap .item-6,
+  .menu-section .menu-content .menu-contact-wrap .menu-btn-wrap .item-7 {
+    display: block;
+    width: auto;
+    margin: 0 10px 0 0;
+    padding: 16px 32px;
+    white-space: nowrap;
+  }
 }
 
-.menu-section .item-7 {
-  display: inline-block;
-  height: 50px;
-  margin: 10px 10px;
-  padding: 16px 42px;
-  font-family: 'Noto Serif TC', serif;
-  letter-spacing: 2px;
+@media (max-width: 767.98px) {
+  .menu-section .menubg {
+    display: none;
+  }
+  .menu-section .menu-content {
+    width: 100%;
+  }
+  .menu-section .menu-content .menu-contact-wrap .menu-btn-wrap {
+    width: 100%;
+  }
+  .menu-section .menu-content .menu-contact-wrap .item-8 {
+    font-size: 12px;
+  }
 }
 
-.menu-section .item-8 {
-  display: inline-block;
-  height: 50px;
-  margin: 10px 10px;
-  padding: 16px 42px;
-  font-family: 'Noto Serif TC', serif;
-  letter-spacing: 2px;
+@media (max-width: 575.98px) {
+  .menu-section .menu-content {
+    padding: 20px;
+  }
+  .menu-section .menu-content .menu-link-wrap .menulink {
+    font-size: 24px;
+  }
 }
 
 .cursor-wrap {
@@ -698,21 +803,12 @@ p {
   pointer-events: none;
 }
 
-.cursor {
-  width: 10px;
-  height: 10px;
-  background: #333;
-  border-radius: 50%;
-  position: absolute;
-  pointer-events: none;
-  z-index: 100;
-}
-
 #ball {
   width: 60px;
   height: 60px;
   background: none;
-  border: 1px solid #222;
+  background: #E6DFD9;
+  opacity: 50%;
   border-radius: 50%;
   /* absoulute才能讓js指定他的xy */
   position: absolute;
@@ -1039,20 +1135,11 @@ p {
   .art-title {
     margin: 120px 0px 0px 0px;
   }
-  .wrap-row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column wrap;
-            flex-flow: column wrap;
-  }
-  .wrap-row .w-30,
-  .wrap-row .w-40 {
-    width: 100%;
-  }
   .art-wrap {
     margin-bottom: 100px;
   }
   .arts-card-1,
+  .arts-card-2,
   .arts-card-3,
   .arts-card-4,
   .arts-card-5,
@@ -1221,9 +1308,7 @@ p {
 }
 
 .class-title-wrap {
-  margin-top: 10%;
-  margin-left: 8%;
-  margin-bottom: 400px;
+  margin: 10% auto 400px 8%;
   width: 36%;
 }
 
@@ -1257,6 +1342,32 @@ p {
   height: 500px;
   background: url(../assets/class_bn_02.png) no-repeat 50% 50%;
   background-size: cover;
+}
+
+@media screen and (max-width: 767.98px) {
+  .class-title-wrap {
+    margin: 100px 0 40px 0;
+    padding: 0px 40px;
+    width: 100%;
+  }
+  .class-img-wrap {
+    margin: 0 0 50px 0;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: static;
+    top: 0%;
+  }
+  .class-img-wrap .class-bn-1 {
+    margin-top: 15%;
+    width: 40%;
+    height: 300px;
+  }
+  .class-img-wrap .class-bn-2 {
+    width: 55%;
+    height: 300px;
+  }
 }
 
 .contact-section .dark-color {
