--- a/css/common.scss
+++ b/css/common.scss
@@ -12,24 +12,6 @@
 @import "./scss/page/index";
 @import "./scss/page/arts";
 @import "./scss/page/works";
-@import "./scss/page/class";
-@import "./scss/page/classcontent";
+@import "./scss/page/classes";
+@import "./scss/page/class-temp";
 @import "./scss/page/contact";
-
-// @media screen and (min-width: 1400px){
-// }
-
-// @media screen and (min-width: 1200px) and (max-width: 1339.98px){
-// }
-
-// @media screen and (min-width: 992px) and (max-width: 1199.98px){
-// }
-
-// @media screen and (min-width: 768px) and (max-width: 991.98px){
-// }
-
-// @media screen and (min-width: 576px) and (max-width: 767.98px){
-// }
-
-// @media screen and (max-width: 575.98px){
-// }
