--- a/css/scss/_text.scss
+++ b/css/scss/_text.scss
@@ -136,6 +136,13 @@ p {
   }
 }
 
+//其他系列 / 學員作品標題
+.sub-title {
+  margin-bottom: 40px;
+  width: 100%;
+  text-align: center;
+}
+
 // .copyright {
 //   position: fixed;
 //   top: 60%;
