--- a/css/scss/page/_arts.scss
+++ b/css/scss/page/_arts.scss
@@ -57,20 +57,12 @@
     margin: 120px 0px 0px 0px;
   }
 
-  .wrap-row {
-    flex-flow: column wrap;
-
-    .w-30,
-    .w-40 {
-      width: 100%;
-    }
-  }
-
   .art-wrap {
     margin-bottom: 100px;
   }
 
   .arts-card-1,
+  .arts-card-2,
   .arts-card-3,
   .arts-card-4,
   .arts-card-5,
