--- a/css/scss/page/_class-temp.scss
+++ b/css/scss/page/_class-temp.scss
@@ -1,9 +1,6 @@
 .class-title-wrap {
-  margin-top: 10%;
-  margin-left: 8%;
-  margin-bottom: 400px;
+  margin: 10% auto 400px 8%;
   width: 36%;
-
 
   h3 {
     margin: 10px 0px 30px 0px;
@@ -33,5 +30,40 @@
     height: 500px;
     background: url(../assets/class_bn_02.png) no-repeat 50% 50%;
     background-size: cover;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .class-title-wrap {
+    margin: 100px 0 40px 0;
+    padding: 0px 40px;
+    width: 100%;
+  }
+
+  .class-img-wrap {
+    margin: 0 0 50px 0;
+    width: 100%;
+    display: flex;
+    position: static;
+    top: 0%;
+    // right: 3%;
+    // z-index: -1;
+
+    .class-bn-1 {
+      margin-top: 15%;
+      // margin-right: 30px;
+      width: 40%;
+      height: 300px;
+      // background: url(../assets/class_bn_01.png) no-repeat 50% 50%;
+      // background-size: cover;
+    }
+
+    .class-bn-2 {
+      // margin-top: 4%;
+      width: 55%;
+      height: 300px;
+      // background: url(../assets/class_bn_02.png) no-repeat 50% 50%;
+      // background-size: cover;
+    }
   }
 }
